<resources>
    <string name="app_name">Twitter</string>
    <string name="app_login_username">Username:</string>
    <string name="app_login_password">Password:</string>
    <string name="app_login_login_button">Log In</string>
    <string name="app_login_register_button">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="telephone_number">Telephone number</string>
    <string name="longitude">Longitude</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="latitude">Latitude</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="google_maps_key">AIzaSyCV_3ywQTaqLtXQgaWn0DvYC5DI35JJKWE</string>
</resources>
