<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="de.stach.christoph.twitter.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/twitter_logo_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/telephone_number"
        android:textColor="@color/blanco" />

    <EditText
        android:id="@+id/editTextTelephoneNumber"
        style="@style/RoundedInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:layout_marginBottom="20dp"
        android:text="@string/app_login_login_button"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/app_login_register_button"
        android:textAlignment="center" />


</LinearLayout>
